src/test/ui/hrtb/hrtb-exists-forall-trait-invariant.stderr
error: implementation of `Trait` is not general enough
  --> $DIR/hrtb-exists-forall-trait-invariant.rs:28:5
   |
LL |     foo::<()>(); //~ ERROR not general enough
   |     ^^^^^^^^^
   |
   = note: Due to a where-clause on `foo`,
   = note: `Trait<for<'b> fn(std::cell::Cell<&'b u32>)>` would have to be implemented for the type `()`
   = note: but `Trait<fn(std::cell::Cell<&'0 u32>)>` is actually implemented for the type `()`, for some lifetime `'0`

error: aborting due to previous error

